--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,13 @@ html, body{
 	font-size: 100%;
 	/*background: #fffc34;*/
 	font-family: 'Open Sans', sans-serif;
+
+}
+
+.index-background{
     background:url(../images/background.jpg);
 }
+
 body a {
 	text-decoration:none;
 	transition:0.5s all;
@@ -5606,9 +5611,3 @@ p.w3ls_para {
     font-weight: 600;
 }
 /** -- //Login Button --*/
-
-/** -- index-category-container --*/
-.index-category-container{
-    background-image: url('/images/ab_pic.jpg');
-}
-/** -- index-category-container --*/
