--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6067,6 +6067,7 @@ button.close {
 }
 .carousel {
   position: relative;
+  background-color: white !important;
 }
 .carousel-inner {
   position: relative;
